--- a/app/src/main/res/layout/description.xml
+++ b/app/src/main/res/layout/description.xml
@@ -2,10 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+
+    <LinearLayout
+        android:id="@+id/descriptionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="description"
-        android:id="@+id/longDescriptionTextView"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/descActivityTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
+        <TextView
+            android:id="@+id/longDescriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="description" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/stepsReyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </LinearLayout>
